--- a/faceb/html/index.html
+++ b/faceb/html/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in to facebook</title>
-    <link rel="stylesheet" href="/first_induvidual_projects/gowtham-main/faceb/css/style.css">
+    <link rel="stylesheet" href="/faceb/css/style.css">
 </head>
 <body>
     <div class="imgs">
-        <img src="/first_induvidual_projects/gowtham-main/faceb/images/fb.svg" width="200px"  alt="">
+        <img src="/faceb/images/fb.svg" width="200px"  alt="">
     </div>
     <div class="log">
         <h2>Log in to Facebook</h2>
